# kind-istio-otel-sample

./: .gitignore  README.md  db.sqlite3  setup.sh  skaffold.yaml
containers/fastapi/: Dockerfile
containers/opentelemetry-collector/: Dockerfile  otel-collector.yml
containers/service-backend-a/: Dockerfile
containers/service-backend-b/: Dockerfile
containers/service-backend-for-frontend/: Dockerfile
containers/service-openobserve/: Dockerfile
containers/service-otel-collector/: Dockerfile  otel-collector.yaml  otel-collector.yml
istio/: policy-authorization.yaml  tracing-for-mesh.yaml  tracing-opentelemetry.yaml
kind/: cluster-config.yaml  kind-config.yaml
manifest/: deployment.yaml  opentelemetry-collector.yaml  service-backend-a.yaml  service-backend-b.yaml  service-backend-for-frontend.yaml
manifests/: service-backend-a.yaml  service-backend-b.yaml  service-backend-for-frontend.yaml  service-openobserve.yaml
service-backend-a/: create_table.py  pyproject.toml
service-backend-a/src/: database.py  functions.py  gateways.py  instrumentation.py  main.py  routers.py
service-backend-b/src/: functions.py  gateways.py  instrumentation.py  routers.py
service-backend-for-frontend/: pyproject.toml
service-backend-for-frontend/src/: entities.py  gateways.py  instrumentation.py  routers.py
src/: functions.py  instrumentation.py  main.py  routers.py  schemas.py
